[project]
name = "optimization-techniques"
version = "0.1.0-dev"
description = """
A curated collection of interesting and novel ideas in query optimization for relational database systems, implemented using the PostBOUND framework.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lazy-loader>=0.4",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "postbound==0.20.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tables",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pytest>=9.0.2",
]

[tool.uv.sources]
tables = { git = "https://github.com/PyTables/PyTables.git" }
